# 22Seconds

./: .gitignore  README.md  constants.py  main.py  player.py  pyproject.toml
assets/: goodIshSoundEffects.aup3-shm  goodIshSoundEffects.aup3-wal
assets/audio/: track1.ceol  track2.ceol  track3.ceol  track4.ceol
assets/palettes/: carrotpalette.aseprite  onionpalette.aseprite  wheat_palette.aseprite
assets/sprites/: short-grass.aseprite
assets/sprites/source/: carrot_sprite.aseprite  dirt.aseprite  hoe_sprite.aseprite  onion_sprite.aseprite  path.aseprite  planted_carrot_0.aseprite  planted_carrot_1.aseprite  planted_carrot_2.aseprite  planted_onion_0.aseprite  planted_onion_1.aseprite  planted_onion_2.aseprite  planted_wheat_1.aseprite  planted_wheat_2.aseprite  wheat_sprite.aseprite
assets/tiles/source/: farmland.aseprite  pathpalette.aseprite  planted_onion_0.aseprite  planted_wheat_0.aseprite
assets/ui/: Sprite-0003.aseprite
src/: __main__.py  audio.py  constants.py  day_cycle.py  dialogue.py  game.py  graphics.py  inputs.py  items.py  lc.py  main.py  map.py  particle.py  player.py  shop.py  ui.py  utils.py
src/dialogue/: __init__.py  renderer.py
src/game_scene/: __init__.py  in_shop.py  intro_cutscene.py  main_menu.py  outro_cutscene.py  playing.py
src/graphics/: __init__.py  floating_hint_text.py  particles.py
src/map/: __init__.py  entity.py  feature.py  tile.py
tools/: lc.py  web_prep.py
